.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
01:59:12 **** Rebuild of configuration Debug for project Assignment_1_1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o Assignment_1_1.exe main.o 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../libmingw32.a(main.o):(.text.startup+0xc0): undefined reference to `WinMain@16'
collect2.exe: error: ld returned 1 exit status
02:03:12 **** Incremental Build of configuration Debug for project Assignment_1_1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:9:10: warning: unused variable 'i' [-Wunused-variable]
    9 |  for(int i=0; ;);
      |          ^
..\main.c:9:2: warning: this 'for' clause does not guard... [-Wmisleading-indentation]
    9 |  for(int i=0; ;);
      |  ^~~
..\main.c:11:3: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'for'
   11 |   return 0;
      |   ^~~~~~
gcc -o Assignment_1_1.exe main.o 
02:11:20 **** Clean-only build of configuration Debug for project Assignment_1_1 ****
rm -rf Assignment_1_1.exe main.o main.d 
02:11:24 **** Rebuild of configuration Debug for project Assignment_1_1 ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:9:2: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
    9 |  for(int i=0; ;);
      |  ^~~
..\main.c:9:2: note: use option '-std=c99', '-std=gnu99', '-std=c11' or '-std=gnu11' to compile your code
..\main.c:9:2: warning: this 'for' clause does not guard... [-Wmisleading-indentation]
..\main.c:11:3: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'for'
   11 |   return 0;
      |   ^~~~~~
..\main.c:9:10: warning: unused variable 'i' [-Wunused-variable]
    9 |  for(int i=0; ;);
      |          ^
02:13:02 **** Incremental Build of configuration Debug for project Assignment_1_1 ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:9:2: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
    9 |  printf("C Programming");
      |  ^~~~~~
..\main.c:9:2: warning: incompatible implicit declaration of built-in function 'printf'
..\main.c:1:1: note: include '<stdio.h>' or provide a declaration of 'printf'
  +++ |+#include <stdio.h>
    1 | /*
gcc -ansi -std=c89 -o Assignment_1_1.exe main.o 
02:13:21 **** Incremental Build of configuration Debug for project Assignment_1_1 ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o Assignment_1_1.exe main.o 
Info: Nothing to build for Assignment_1_1
02:32:04 **** Rebuild of configuration Debug for project Assignment_1_2 ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o Assignment_1_2.exe main.o 
02:33:34 **** Incremental Build of configuration Debug for project Assignment_1_2 ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o Assignment_1_2.exe main.o 
Info: Nothing to build for Assignment_1_2
02:34:21 **** Incremental Build of configuration Debug for project Assignment_1_2 ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o Assignment_1_2.exe main.o 
Info: Nothing to build for Assignment_1_2
Info: Nothing to build for Assignment_1_2
02:34:38 **** Incremental Build of configuration Debug for project Assignment_1_2 ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o Assignment_1_2.exe main.o 
02:41:18 **** Rebuild of configuration Debug for project Assignment_1_3 ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -ansi -std=c89 -o Assignment_1_3.exe main.o 
Info: Nothing to build for Assignment_1_3
Info: Nothing to build for Assignment_1_3
